--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,11 +1,11 @@
 <div class="center hero-unit">
-  <h1>Welcome to the Sample App</h1>
+  <h6>Welcome to the Sample App</h6>
 
   <h2>
-Ricky is echt kk geil (maar wel homo).
+Dit is de Sample App.
   </h2>
 
-  <%= link_to "Sign up now!", '#', class: "btn btn-large btn-primary" %>
+  <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
 </div>
 
 <%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
