--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -138,7 +138,7 @@ aside {
       letter-spacing: -1px;
       margin-bottom: 3px;
       margin-top: 0px;
-    }
+		}
   }
 }
 
@@ -185,5 +185,30 @@ input {
 		&:last-child {
 			border-bottom: 1px solid $grayLighter;
 		}
+	}
+}
+
+/* microposts */
+.microposts {
+	list-style: none;
+	margin: 10px 0 0 0;
+	li {
+		padding: 10px 0;
+		border-top: 1px solid #e8e8e8;
+	}
+}
+
+.timestamp {
+	color: $grayLight;
+}
+
+.content {
+	display: block;
+}
+
+aside {
+	textarea {
+		height: 100px;
+		margin-bottom: 5px;
 	}
 }
